# allure-server

./: .gitignore  .pdm.toml  README.md  pyproject.toml  requirements.txt
app/: main.py  requirements-dev.txt
app/routers/: report.py  result.py
ui/: .dockerignore  .prettierignore  .prettierrc  Dockerfile  package-lock.json  package.json
ui/etc/nginx/conf.d/: default.conf
