[project]
name = ""
version = ""
description = ""
authors = [
    {name = "v.haritonskiy", email = "v.haritonskiy@smartweb.com.ua"},
]
dependencies = [
    "fastapi>=0.93.0",
    "alembic>=1.10.2",
    "sqlalchemy>=2.0.5.post1",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.6",
]
requires-python = ">=3.11"
license = {text = "MIT"}
[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.black]
line-length = 80
